# mdpilot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: architecture.md  chat.md  claude-integration.md  perf.md  plan.md  preview.md  requirements.md  spike-report.md  terminal.md  ui.md
spike/egui_commonmark/: Cargo.toml
spike/egui_commonmark/src/: app.rs  main.rs  sample.md
spike/egui_term/: Cargo.toml
spike/egui_term/src/: app.rs  main.rs
src/: app.rs  cli.rs  error.rs  main.rs  project.rs  tab.rs
src/chat/: history.rs  history_picker.rs  mod.rs  quote.rs  session.rs  session_store.rs  stream.rs  view.rs
src/config/: paths.rs
src/preview/: image.rs  link.rs  loader.rs  mod.rs  render.rs  watcher.rs
src/ui/: chat_pane.rs  file_tree.rs  fonts.rs  fuzzy_finder.rs  layout.rs  mod.rs  path_bar.rs  preview_pane.rs  session_picker.rs  tab_bar.rs
src/vim/: mod.rs  tests.rs
