[package]
name = "mdpilot"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "Native GUI app that previews Markdown while Claude Code edits it"
publish = false

[[bin]]
name = "mdpilot"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
directories = "6"
eframe = "0.34"
egui_commonmark = { version = "0.23", features = [
    "better_syntax_highlighting",
    "svg",
    "embedded_image",
] }
# Cross-platform filesystem watcher (Phase 5.1, F-08). Default features
# pull in macos_fsevent; the dispatcher thread is owned by `notify`
# itself, so we don't spawn an extra std::thread for it.
notify = "8"
open = "5"
# Used directly to scan markdown for image events and rewrite relative
# URIs (Phase 4.5). egui_commonmark already pulls in 0.13 transitively,
# so cargo unifies on a single compilation. Match the egui_commonmark
# `pulldown_cmark` feature flag so the parse modes stay aligned.
pulldown-cmark = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

# `png` is also needed by the debug-build screenshot helper (`cfg(debug_assertions)`),
# so the feature set serves both production image rendering and the dev tool. Cargo
# unifies these features across all dependents (including egui_extras' image loader),
# so JPEG / PNG support flows into the preview pane automatically. GIF / WebP need
# additional egui_extras loader features and are deferred per docs/preview.md §6.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
