[package]
name = "mdpilot"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "Native GUI app that previews Markdown while Claude Code edits it"
publish = false

[[bin]]
name = "mdpilot"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
directories = "6"
eframe = "0.34"
egui_commonmark = { version = "0.23", features = [
    "better_syntax_highlighting",
    "svg",
    "embedded_image",
    # Phase 9.1: enables egui_extras/http which lets HTTPS image
    # URLs in markdown actually render (via the `ehttp` transitive
    # dep). MVP gated this behind the "warning icon only" behavior;
    # `docs/preview.md` §6 was explicit that the gap would close
    # in Phase 9.
    "fetch",
] }
# Cross-platform filesystem watcher (Phase 5.1, F-08). Default features
# pull in macos_fsevent; the dispatcher thread is owned by `notify`
# itself, so we don't spawn an extra std::thread for it.
notify = "8"
open = "5"
# Native file-picker dialog used by `Cmd+O` / `Ctrl+O` (Phase 7.1).
# `default-features = false` skips the Linux xdg-portal / wayland deps
# until Linux support lands (Phase 8 is macOS + Windows only). The
# remaining surface is `rfd::FileDialog` on the synchronous blocking
# path, which we wrap in a thread + mpsc channel so the UI never
# stalls while the dialog is open.
rfd = { version = "0.17", default-features = false }
# Used directly to scan markdown for image events and rewrite relative
# URIs (Phase 4.5). egui_commonmark already pulls in 0.13 transitively,
# so cargo unifies on a single compilation. Match the egui_commonmark
# `pulldown_cmark` feature flag so the parse modes stay aligned.
pulldown-cmark = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

# Production image rendering goes through egui_extras' image loader,
# which picks up our format features via cargo unification. `png` is
# also used by the `--enable-dev-tools` screenshot helper in app.rs.
# GIF / WebP need additional egui_extras loader features and are
# deferred per docs/preview.md §6.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
