[package]
name = "mdpilot"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "Native GUI app that previews Markdown while Claude Code edits it"
publish = false

[[bin]]
name = "mdpilot"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
directories = "6"
eframe = "0.34"
# Cross-platform filesystem watcher (Phase 5.1, F-08). Default features
# pull in macos_fsevent; the dispatcher thread is owned by `notify`
# itself, so we don't spawn an extra std::thread for it.
notify = "8"
# Phase 10.11 (2026-06-11): fuzzy matcher behind the Cmd+P file picker.
# `nucleo-matcher` is the lower-level scoring core shared by helix /
# zellij; the higher-level `nucleo` adds async streaming we don't need
# (the project's .md tree is small enough to score synchronously).
nucleo-matcher = "0.3"
# Native file-picker dialog used by `Cmd+O` / `Ctrl+O` (Phase 7.1).
# `default-features = false` skips the Linux xdg-portal / wayland deps
# until Linux support lands (Phase 8 is macOS + Windows only). The
# remaining surface is `rfd::FileDialog` on the synchronous blocking
# path, which we wrap in a thread + mpsc channel so the UI never
# stalls while the dialog is open.
rfd = { version = "0.17", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Syntect provides the markdown syntax + theme bundles we use to
# colorize the read-only source view in `preview::render`. Disabling
# default features drops the `onig` regex backend (which needs a C
# build) in favor of the pure-Rust `fancy-regex`; `default-syntaxes`
# + `default-themes` ship the bundled `markdown` syntax and
# `base16-ocean.dark` / `InspiredGitHub` themes referenced by
# `docs/preview.md` §4.
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

# `png` is used by the `--enable-dev-tools` screenshot helper in app.rs
# (egui's screenshot output → PNG file).
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1

# Phase 8.1 / Phase 10 release bundle (2026-06-11): `cargo bundle
# --release` reads this section to build a macOS `.app`. Identifier
# follows the AppPaths::resolve scheme (`dev.mdpilot.mdpilot`) so
# config / data / cache dirs stay consistent between dev-builds and
# bundled installs.
[package.metadata.bundle]
name = "mdpilot"
identifier = "dev.mdpilot.mdpilot"
short_description = "Markdown editor paired with Claude Code"
long_description = """
mdpilot is a native GUI app that pairs a vim-style markdown editor
with a Claude Code chat session, so you can edit and consult an AI
side-by-side without leaving your keyboard.
"""
category = "DeveloperTool"
copyright = "Copyright (c) 2026 cancer"
osx_minimum_system_version = "11.0"
